# obsidian_watchdog

./: .gitignore  README.md  config.yaml  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  router.py  runner.py  setup.py  tools_common.py
agents/: backlinker.py
src/obsidian_watchdog/: deps.py  main.py  models.py  notes_db_manager.py  router.py  runner.py  tools_common.py
src/obsidian_watchdog/agents/: __init__.py  backlinker.py
tests/: __init__.py  conftest.py  test_backlinker.py  test_deps.py  test_main.py  test_main_db_population.py  test_runner.py
